--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,6 @@ p {
 .contact-nav {
   display: flex;
   margin-left: auto;
-
   font-weight: 500;
   letter-spacing: 0.02em;
 }
@@ -125,19 +124,34 @@ p {
 .contact-nav a {
   padding-top: 32px;
   padding-bottom: 32px;
-
+  align-content: center;
+  align-items: baseline;
+  display: flex;
+  align-items: center;
   color: var(--title-text-color);
   text-decoration: none;
+}
+.icon-mail,
+.icon-phone {
+  margin-right: 10px;
+  fill: var(--title-text-color);
 }
 .contact-nav a:hover,
 .contact-nav a:focus {
   color: var(--accent-color);
 }
+.contact-nav a:hover svg,
+.contact-nav a:focus svg {
+  fill: var(--accent-color);
+}
 /* Герой */
 
 .hero {
   /* margin-bottom: 94px; */
-
+  background: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
+    url(../images/bg.svg) center;
+  background-repeat: no-repeat;
+  background-position: center;
   background-color: #2f303a;
   color: #ffffff;
   text-align: center;
@@ -177,6 +191,7 @@ p {
   color: #ffffff;
 }
 /* Преимущества */
+
 .features {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -218,6 +233,11 @@ p {
   margin-left: 30px;
 }
 
+.icon-features {
+  background: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
 /* Чем мы занимаемся*/
 
 .section {
@@ -267,6 +287,10 @@ p {
 .team-border {
   padding-top: 30px;
   padding-bottom: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background: #ffffff;
 }
 .team-list .team-item + .team-item {
   margin-left: 30px;
@@ -279,12 +303,97 @@ p {
   line-height: 1.18;
   color: var(--primary-text-color);
 }
+
 .team-discription {
   /* margin-bottom: 30px; */
 
   font-size: 16px;
   line-height: 1.18;
   color: var(--title-text-color);
+}
+.social-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+.team-icon {
+  fill: #afb1b8;
+  text-align: center;
+  margin: 12px;
+}
+
+.team-button {
+  border-radius: 50%;
+  background-color: #ffffff;
+  width: 44px;
+  height: 44px;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+.social-list li + li {
+  margin-left: 10px;
+}
+
+.team-button:hover {
+  background-color: var(--accent-color);
+  cursor: pointer;
+}
+.team-button:hover svg {
+  fill: #ffffff;
+}
+.team-button:focus {
+  background-color: var(--accent-color);
+  cursor: pointer;
+}
+.team-button:focus svg {
+  fill: #ffffff;
+}
+/* Клиенты */
+.clients-title {
+  padding-top: 94px;
+  padding-bottom: 50px;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
+.clients-icon {
+  fill: #afb1b8;
+}
+.clients-list {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 94px;
+}
+.clients-item {
+  padding: 16px 32px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+/* .clients-link:hover,
+.clients-link:focus {
+  fill: #2196F3;
+  border: 1px solid #2196F3;
+} */
+.clients-item:hover {
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+.clients-item:hover svg {
+  fill: #2196f3;
+}
+.clients-item:focus {
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+.clients-item:focus svg {
+  fill: #2196f3;
+}
+.clients-list .clients-item + .clients-item {
+  margin-left: 30px;
 }
 /* Футер */
 .footer {
@@ -322,6 +431,51 @@ address li {
   font-style: normal;
   margin-bottom: 0;
 }
+footer .footer-list {
+  display: inline-flex;
+  justify-content: center;
+}
+.footer-list {
+  align-items: baseline;
+}
+.footer-list > li + li {
+  margin-left: 70px;
+}
+footer h2 {
+  font-size: 14px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: #ffffff;
+  line-height: 1.14;
+}
+.footer-icon {
+  fill: #ffffff;
+  margin: 12px;
+}
+.footer-button {
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 44px;
+  height: 44px;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-button:hover {
+  background-color: var(--accent-color);
+  cursor: pointer;
+}
+.footer-button:hover svg {
+  fill: #ffffff;
+}
+.footer-button:focus {
+  background-color: var(--accent-color);
+  cursor: pointer;
+}
+.footer-button:focus svg {
+  fill: #ffffff;
+}
 /* Портфолио */
 .works {
   padding-top: 94px;
@@ -356,6 +510,10 @@ address li {
 .portfolio-button:focus {
   background-color: var(--accent-color);
   color: #ffffff;
+  background: #2196f3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 .button-list {
   margin-bottom: 50px;
@@ -386,16 +544,6 @@ address li {
   margin-right: auto;
 }
 
-.works-item {
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-.works-item:nth-child(3n) {
-  margin-right: 0;
-}
-.works-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
 .border {
   background: #ffffff;
   border: 1px solid #eeeeee;
@@ -404,16 +552,22 @@ address li {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-
-/* .works-item {
+.works-item:hover,
+.border:focus {
+  background: #ffffff;
+  cursor: pointer;
+  border: 1px solid #eeeeee;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.works-item {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
-  border-bottom: 1px solid #EEEEEE;
-  border-left: 1px solid #EEEEEE;
-  border-right: 1px solid #EEEEEE;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
   margin-bottom: 30px;
-  }
-  
+}
 
 .works-item:nth-child(3n) {
   margin-right: 0;
@@ -421,12 +575,6 @@ address li {
 .works-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.works-title {
-  margin: 20px 24px 4px 24px;
-}
-.works-text {
-  margin: 0px 24px 20px 24px;
-}  */
 
 .visually-hidden {
   position: absolute;
